@@ -1,0 +1,11 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module America #:nodoc:
+module North_Dakota #:nodoc:
+include DirectoryLoader
+directory 'definitions/America/North_Dakota'
+end
+end
+end
+end
