@@ -1,0 +1,9 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module Asia #:nodoc:
+include DirectoryLoader
+directory 'definitions/Asia'
+end
+end
+end
