@@ -1,0 +1,9 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module Brazil #:nodoc:
+include DirectoryLoader
+directory 'definitions/Brazil'
+end
+end
+end
