@@ -1,0 +1,9 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module Canada #:nodoc:
+include DirectoryLoader
+directory 'definitions/Canada'
+end
+end
+end
