@@ -1,0 +1,9 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module Indian #:nodoc:
+include DirectoryLoader
+directory 'definitions/Indian'
+end
+end
+end
