@@ -1,0 +1,9 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module Mexico #:nodoc:
+include DirectoryLoader
+directory 'definitions/Mexico'
+end
+end
+end
