@@ -1,0 +1,9 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module Mideast #:nodoc:
+include DirectoryLoader
+directory 'definitions/Mideast'
+end
+end
+end
