@@ -1,0 +1,9 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module Pacific #:nodoc:
+include DirectoryLoader
+directory 'definitions/Pacific'
+end
+end
+end
