@@ -1,0 +1,9 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module US #:nodoc:
+include DirectoryLoader
+directory 'definitions/US'
+end
+end
+end
